# MSYS2

./: .gitignore  Readme.md
modbusPolling/: CMakeLists.txt  Readme.md
modbusPolling/include/: common.h  polling.h  thread_safe_queue.h
modbusPolling/src/: main_rtu.c  main_tcp.c  polling.c  processing_thread.c  rtu_poll.c  rtu_server.c  tcp_poll.c  thread_safe_queue.c
rtu_tcp_client_server/: CMakeLists.txt  Readme.md
rtu_tcp_client_server/include/: common.h
rtu_tcp_client_server/src/: rtu_client.c  rtu_server.c  tcp_client.c  tcp_server.c
vscode_libmodbus_test/: CMakeLists.txt  Readme.md
vscode_libmodbus_test/src/: main.c
win_linux_libmodbus_test/: CMakeLists.txt  Readme.md
win_linux_libmodbus_test/src/: main.c
